# HH.ru_Project

./: .gitignore  README.md  main.py  pyproject.toml  vacancies.json
src/: __init__.py  api_hh.py  enum_town.py  save_file.py  user_intaraction.py  vacancies.py
src/abstract/: abstract_classes.py
src/api_exchange/: exchange.py
src/database/: DBManager.py  DBSetup.py  config.py  database.ini
src/hh_employes/: api_employee_hh.py  employeer.py
src/hh_vacancies/: api_hh.py  vacancies.py
src/mixins/: mixins.py
src/utils/: correct_tuple.py  correct_values.py  enum_town.py  save_file.py  user_intaraction.py
tests/: conftest.py  test.json  test_api.py  test_convert.py  test_enum.py  test_fixture.py  test_save_files.py  test_vacancies.py
